Adjust for Graal native image.