@@ -1,5 +1,8 @@
 package build.buildbuddy.step;
 
+import build.buildbuddy.BuildStepArgument;
+import build.buildbuddy.BuildStepContext;
+
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.FileVisitResult;
@@ -15,10 +18,17 @@ import java.util.concurrent.CompletionStage;
 import java.util.concurrent.Executor;
 import java.util.function.Function;
 
-import build.buildbuddy.BuildStepArgument;
-import build.buildbuddy.BuildStepContext;
-
 public class Javac extends ProcessBuildStep {
+
+    static {
+        if (System.getProperty("java.home") == null) {
+            String home = System.getenv("JAVA_HOME");
+            if (home == null) {
+                throw new IllegalStateException("Neither java.home or JAVA_HOME available");
+            }
+            System.setProperty("java.home", home);
+        }
+    }
 
     protected Javac(Function<List<String>, ? extends ProcessHandler> factory) {
         super(factory);
@@ -39,7 +49,6 @@ public class Javac extends ProcessBuildStep {
             throws IOException {
         Path target = Files.createDirectory(context.next().resolve(CLASSES));
         List<String> files = new ArrayList<>(), path = new ArrayList<>(), commands = new ArrayList<>(List.of(
-                "--enable-preview",
                 "--release", Integer.toString(Runtime.version().version().getFirst()),
                 "-d", target.toString()));
         for (BuildStepArgument argument : arguments.values()) {
